--- a/EmuXS/EmuXS.csproj
+++ b/EmuXS/EmuXS.csproj
@@ -144,8 +144,8 @@
     <Compile Include="ConPTY\TermConPTY.cs" />
     <Compile Include="ConPTY\Terminal.cs" />
     <Compile Include="ConPTY\WindowsPseudoConsole.cs" />
-    <Compile Include="DirectxPage.xaml.cs">
-      <DependentUpon>DirectxPage.xaml</DependentUpon>
+    <Compile Include="ScreenPage.xaml.cs">
+      <DependentUpon>ScreenPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
@@ -179,7 +179,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="DirectxPage.xaml">
+    <Page Include="ScreenPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -203,35 +203,11 @@
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.2.14</Version>
     </PackageReference>
-    <PackageReference Include="SharpDX">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.D3DCompiler">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Direct2D1">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Direct3D11">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Direct3D9">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.DirectInput">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.DXGI">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.Mathematics">
-      <Version>4.2.0</Version>
-    </PackageReference>
-    <PackageReference Include="SharpDX.XInput">
-      <Version>4.2.0</Version>
+    <PackageReference Include="Win2D.uwp">
+      <Version>1.27.0</Version>
     </PackageReference>
     <PackageReference Include="xunit">
-      <Version>2.5.1</Version>
+      <Version>2.6.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
